# MyLogger

./: README.md
src/: .ycm_extra_conf.py  CMakeLists.txt  Logger2.cpp  Logger2.h  main.cpp
src/.kdev4/: src.kdev4
